2007-05-22  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpclipboard.c
	* app/widgets/gimpcontainerview.c
	* app/widgets/gimpdialogfactory.c: allocate structs using GSlice.

2007-05-22  Sven Neumann  <sven@gimp.org>

	* libgimpconfig/gimpscanner.c
	* libgimpwidgets/gimpwidgets.c: allocate structs using GSlice.

2007-05-22  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpmagnifyoptions.[ch]: remove "threshold" from
	the options struct and added compat code in get_property().

2007-05-22  Michael Natterer  <mitch@gimp.org>

	* app/config/gimprc-unknown.c
	* app/config/gimpxmlparser.c: allocate structs using GSlice.

2007-05-22  Michael Natterer  <mitch@gimp.org>

	* app/vectors/gimpvectors-import.c: allocate structs using GSlice.

2007-05-22  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpactionview.c: use GSlice to allocate struct.

2007-05-22  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontrollers.c
	* app/widgets/gimpdevices.c
	* app/widgets/gimpdevicestatus.c
	* app/widgets/gimpeditor.c: allocate structs using GSlice.

2007-05-22  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpmenufactory.c
	* app/widgets/gimpactionfactory.c: allocate structs using GSlice.

2007-05-22  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimppropwidgets.c (gimp_prop_aspect_ratio_new):
	use GSlice and plugged a memleak.

2007-05-22  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimphelp.c
	* app/widgets/gimpuimanager.c
	* app/widgets/gimpview-popup.c
	* app/widgets/gtkwrapbox.c: use GSlice to allocate structs.

2007-05-22  Michael Natterer  <mitch@gimp.org>

	* app/base/tile.[ch]: changed tile_init() to tile_new() and return
	a GSlice-allocated Tile structure.

	(tile_destroy): free it using GSLice.

	* app/base/tile-manager.c: use tile_new() instead of g_new plus
	tile_init(). Also allocate TileManager itself using GSlice.

	* app/xcf/xcf-load.c (xcf_load_parasite): allocate parasites using
	gimp_parasite_new().

2007-05-22  Sven Neumann  <sven@gimp.org>
