@@ -645,77 +645,6 @@ tile_manager_map_over_tile (TileManager *tm,
   tile_manager_map (tm, tl->tile_num, srctile);
 }
 
-PixelDataHandle *
-request_pixel_data (TileManager *tm,
-                    gint         x1,
-                    gint         y1,
-                    gint         x2,
-                    gint         y2,
-                    gboolean     wantread,
-                    gboolean     wantwrite)
-{
-  PixelDataHandlePrivate *pdh;
-  guint tile_num_1, tile_num_2;
-  guint w, h;
-
-  pdh = g_new (PixelDataHandlePrivate, 1);
-
-  pdh->tm            = tm;
-  pdh->readable      = wantread;
-  pdh->writeable     = wantwrite;
-  pdh->x1            = x1;
-  pdh->y1            = y1;
-  pdh->x2            = x2;
-  pdh->y2            = y2;
-  pdh->public.width  = w = (x2 - x1) + 1;
-  pdh->public.height = h = (y2 - y1) + 1;
-
-  tile_num_1 = tile_manager_get_tile_num (tm, x1, y1);
-  tile_num_2 = tile_manager_get_tile_num (tm, x2, y2);
-
-  if (tile_num_1 == tile_num_2)
-    {
-      pdh->tile = tile_manager_get (tm, tile_num_1, wantread, wantwrite);
-      pdh->public.data = tile_data_pointer (pdh->tile,
-                                            x1 % TILE_WIDTH,
-                                            y1 % TILE_HEIGHT);
-      pdh->public.stride = tile_bpp (pdh->tile) * tile_ewidth (pdh->tile);
-      pdh->local_buffer = FALSE;
-    }
-  else
-    {
-      pdh->public.data = g_new (guchar, w * h * tm->bpp);
-      pdh->public.stride = tm->bpp * w;
-      pdh->local_buffer = TRUE;
-      pdh->tile = NULL;
-
-      if (wantread)
-        read_pixel_data (tm, x1, y1, x2, y2,
-                         pdh->public.data, pdh->public.stride);
-    }
-  return (PixelDataHandle *) pdh;
-}
-
-void
-release_pixel_data (PixelDataHandle *xpdh)
-{
-  PixelDataHandlePrivate *pdh = (PixelDataHandlePrivate *) xpdh;
-
-  if (pdh->local_buffer)
-    {
-      if (pdh->writeable)
-        write_pixel_data (pdh->tm, pdh->x1, pdh->y1, pdh->x2, pdh->y2,
-                          pdh->public.data, pdh->public.stride);
-      g_free (pdh->public.data);
-    }
-  else
-    {
-      tile_release (pdh->tile, pdh->writeable);
-    }
-
-  g_free (pdh);
-}
-
 void
 read_pixel_data (TileManager *tm,
                  gint         x1,
